expected/main/core/structs/structs5a.err
ERROR: "actual/main/core/structs/structs5a.lc", line 6
struct S1/16
^
Sum of component widths is 16 more than expected total

ERROR: Aborting after previously reported error

